// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-scrollable css-1eyfaef"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
>
  <div
    class="css-1qs21wj"
  >
    Some people are worth melting for.
  </div>
</div>
`;

exports[`props should render smoothScroll 1`] = `
<div
  class="wp-components-scrollable css-28lmid"
  data-g2-c16t="true"
  data-g2-component="Scrollable"
>
  <div
    class="css-1qs21wj"
  >
    Some people are worth melting for.
  </div>
</div>
`;
